# x-ray

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.llvm  Dockerfile.x-ray  Makefile  README.md  go.mod  go.sum  install.py
LLVMRace/: .gitignore  CMakeLists.txt
LLVMRace/clio/: go.sum  main.go
LLVMRace/clio/cmd/diff/: rdiff.go
LLVMRace/include/aser/PreProcessing/: IRPreProcessor.h
LLVMRace/include/aser/Util/: Iterators.h  SingleInstanceOwner.h
LLVMRace/include/spdlog/: async_logger-inl.h  logger-inl.h  spdlog-inl.h
LLVMRace/include/spdlog/details/: backtracer-inl.h  console_globals.h  file_helper.h  pattern_formatter-inl.h  registry.h
LLVMRace/include/spdlog/fmt/: fmt.h
LLVMRace/include/spdlog/sinks/: dist_sink.h  wincolor_sink-inl.h
LLVMRace/lib/: CMakeLists.txt
LLVMRace/lib/aser/: CMakeLists.txt
LLVMRace/lib/aser/PointerAnalysis/: CMDOptions.cpp
LLVMRace/lib/aser/Util/: Log.cpp
LLVMRace/tools/RaceDetector/include/: BradPass.h  LocksetManager.h  OmpRaceEngine.h  OpenLib.h
LLVMRace/tools/RaceDetector/src/: BradPass.cpp  InsertKMPCPass.cpp  RaceDetectionPass.cpp  Races.cpp
LLVMRace/tools/WPA/: wpa.cpp
LLVMRace/unittests/PointerAnalysis/: CMakeLists.txt
code-analyzer/: CMakeLists.txt
code-analyzer/include/spdlog/: async.h  logger.h  spdlog-inl.h  spdlog.h
code-analyzer/include/spdlog/details/: circular_q.h  log_msg.h  mpmc_blocking_q.h  os.h  registry-inl.h  synchronous_factory.h  thread_pool-inl.h
code-analyzer/include/spdlog/sinks/: ansicolor_sink.h  daily_file_sink.h  dist_sink.h  msvc_sink.h  wincolor_sink-inl.h  wincolor_sink.h
code-analyzer/src/: CMakeLists.txt
code-analyzer/src/PointerAnalysis/: CMDOptions.cpp  CMakeLists.txt
code-analyzer/src/PointerAnalysis/Context/: Context.cpp
code-analyzer/src/PointerAnalysis/Model/: DefaultHeapModel.cpp  DefaultLangModel.cpp  MemModels.cpp
code-analyzer/src/PointerAnalysis/Program/: Program.cpp
code-analyzer/src/PointerAnalysis/Solver/: PointsToSet.cpp
code-analyzer/src/PointerAnalysis/Util/: TypeMetaData.cpp  (+1 more)
code-analyzer/src/PreProcessing/: CMakeLists.txt
code-analyzer/src/SolanaAnalyzer/: AccountIDL.cpp  CMakeLists.txt  DebugFlags.cpp  LocksetManager.cpp  LogColor.cpp  Main.cpp  RustAPIRewriter.cpp  SVE.cpp  SolanaAnalysisPass.cpp  SourceInfo.cpp  StaticThread.cpp
code-analyzer/src/Util/: CMakeLists.txt  Log.cpp  TypeMetaData.cpp  Util.cpp
code-analyzer/src/conflib/: CMakeLists.txt  conflib.cpp
code-analyzer/test/: CMakeLists.txt  CosplayFullTest.cpp  CosplayPartialTest.cpp  OverflowAddTest.cpp  OverflowMulTest.cpp  OverflowSubTest.cpp
code-detector/src/: CMakeLists.txt
code-detector/src/PreProcessing/: CMakeLists.txt  IRPreProcessor.cpp  PreProcPassManagerBuilder.cpp
code-detector/src/SolanaAnalyzer/: CMakeLists.txt  DebugFlags.cpp  LogColor.cpp  Main.cpp  SolanaAnalysisPass.cpp  main.cpp
code-detector/src/SolanaAnalyzor/: CMakeLists.txt  LocksetManager.cpp  SolanaAnalyzorPass.cpp  StaticThread.cpp  main.cpp
code-detector/src/Util/: TypeMetaData.cpp
code-detector/src/sol-detector/: CMakeLists.txt  RaceDetectionPass.cpp  SVE.cpp
code-detector/test/: CMakeLists.txt  OverflowAddTest.cpp
code-detector/tools/RaceDetector/: CMakeLists.txt
code-detector/unittests/: CMakeLists.txt  Main.cpp
code-detector/unittests/PointerAnalysis/: PTAPassTest.cpp  TestDriver.cpp
code-detector/unittests/RaceDetector/: RDUtilTest.cpp  SVFTest.cpp
code-parser/: .gitignore  CMakeLists.txt  README.md
code-parser/include/: jsoncons  jsoncons_ext
code-parser/include/spdlog/: async_logger.h  common-inl.h
code-parser/lib/o2/: CMakeLists.txt
code-parser/src/: CMakeLists.txt
code-parser/src/RaceDetector/: CMakeLists.txt  STRaceDetector.cpp  SolRaceDetector.cpp
code-parser/src/SolanaParser/: CMakeLists.txt  Main.cpp
code-parser/src/antlr-rust/: CMakeLists.txt  README.md  RustLexer.cpp  RustLexer.g4  RustLexer.h  RustLexerBase.h  RustParser.cpp  RustParser.h  RustParser.tokens  RustParserBase.h  RustParserBaseListener.cpp  RustParserBaseListener.h  RustParserBaseVisitor.cpp  RustParserBaseVisitor.h  RustParserListener.cpp  RustParserListener.h  RustParserVisitor.cpp  RustParserVisitor.h  run
code-parser/src/conflib/: CMakeLists.txt  conflib.cpp
code-parser/src/o2/: CMakeLists.txt
code-parser/src/parser/: CMakeLists.txt  RustLexer.cpp  RustParser.g4  RustParser.h  RustParserBase.h  RustParserListener.h
code-parser/src/sol-code-parser/: CMakeLists.txt  main.cpp
code-parser/test/: CMakeLists.txt  SolLLVMIRGeneratorTest.cpp
code-parser/tools/: CMakeLists.txt
code-parser/tools/RaceDetector/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code-parser/utils/conflib/: CMakeLists.txt
code-parser/utils/parser/: CMakeLists.txt  RustLexer.h  RustLexer.interp  RustLexerBase.h  RustParser.interp  RustParserBaseListener.h  RustParserBaseVisitor.cpp  RustParserBaseVisitor.h  RustParserListener.cpp  RustParserVisitor.cpp  RustParserVisitor.h  run
code-scanner/tools/WPA/: CMakeLists.txt
code-scanner/utils/googletest/: CMakeLists.txt
coderrect/benchmark/pthreadrace/: CMakeLists.txt  README.md  apr_cond_no_race.c  apr_cond_race.c  apr_mutex_no_race.cpp  apr_mutex_race.cpp  apr_rwlock_no_race.cpp  apr_rwlock_race.cpp  apr_thread_no_race.cpp  apr_thread_pool_race.cpp  apr_thread_race.cpp  benchmark  benchmark-parallel.py  benchmark.py  boost_thread.cpp  boost_thread_func.cpp  boost_thread_lambda.cpp  boost_thread_memptr.cpp  boost_thread_virtual_memptr.cpp  buildlib  condition_variable.cpp  cpp_vtable_no_race.cpp  deadlock.cpp  helloworld.cpp  homemade_spinlock.json  homemade_spinlock_norace.cpp  jieyu_aget1_deadlock.cpp  jieyu_aget2_av.cpp  jieyu_apache21287_av.cpp  jieyu_httrack_race.cpp  jieyu_memcached_av.cpp  libringbuffer.json  lock_guard.cpp  lock_unlock_unlock_race.cpp  lockunlockfunc.json  lockunlockfunc_norace.cpp  lockunlockfunc_race.cpp  loop_unroll_norace.cpp  loop_unroll_race.cpp  map_basic_norace.cpp  (+74 more)
demo/example/: Cargo.toml
demo/example/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
(+1544 files in other folders)
